tests/integration/snapshots/integration__commands__format__ARRAY_MANY_SINGLE_KEY_OBJECTS.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[
    {"alpha": 1},
    {"beta": true},
    {"gamma": null},
    {"delta": "value"},
    {"epsilon": [1, 2, 3]}
]
stdout ---
[
  { "alpha": 1 },
  { "beta": true },
  { "gamma": null },
  { "delta": "value" },
  { "epsilon": [1, 2, 3] }
]

stderr ---
