tests/integration/snapshots/integration__commands__format__ARRAY_MIXED_PRIMITIVES_OVER_80.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[1, 2, "three", true, null, false, "six", 7.5, 8, "nine", 10, true, 12, null, "fifteen", 16]
stdout ---
[
  1,
  2,
  "three",
  true,
  null,
  false,
  "six",
  7.5,
  8,
  "nine",
  10,
  true,
  12,
  null,
  "fifteen",
  16
]

stderr ---
